# pg_test

./: CMakeLists.txt  lady_bug_camera_control.cpp  ladybugStitchFrom3DMeshCamera.cpp  ladybug_16bitTest.cpp  ladybug_8bitTest.cpp  ladybug_8bitTest_rect.cpp  ladybug_raw.cpp
assets/: TextureCam1.pgm  camera_params.txt  mesh.txt
generateTests/: CMakeLists.txt  main.cpp
include/: ladybugGeometry.h
ladybugStitchFrom3DMesh/: ladybugStitchFrom3DMesh.cpp  ladybugStitchFrom3DMesh.rc  ladybugStitchFrom3DMesh.vcxproj  pgrpnmio.cpp  pgrpnmio.h
old/: LadybugTranslate2dTo3d.cpp
results/: test.results
test/: camera_config.inc  test_upsample.cpp  tests.inc
